fix notebooks to pull new data

--- a/notebooks/images_convert.ipynb
+++ b/notebooks/images_convert.ipynb
@@ -2,80 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyppeteer\n",
-      "  Using cached pyppeteer-0.2.2-py3-none-any.whl (145 kB)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.42.1 in /opt/conda/lib/python3.8/site-packages (from pyppeteer) (4.48.0)\n",
-      "Collecting pyee<8.0.0,>=7.0.1\n",
-      "  Using cached pyee-7.0.2-py2.py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: urllib3<2.0.0,>=1.25.8 in /opt/conda/lib/python3.8/site-packages (from pyppeteer) (1.25.9)\n",
-      "Collecting websockets<9.0,>=8.1\n",
-      "  Downloading websockets-8.1-cp38-cp38-manylinux2010_x86_64.whl (78 kB)\n",
-      "\u001b[K     |████████████████████████████████| 78 kB 5.4 MB/s eta 0:00:011\n",
-      "\u001b[?25hRequirement already satisfied: appdirs<2.0.0,>=1.4.3 in /opt/conda/lib/python3.8/site-packages (from pyppeteer) (1.4.4)\n",
-      "Installing collected packages: pyee, websockets, pyppeteer\n",
-      "Successfully installed pyee-7.0.2 pyppeteer-0.2.2 websockets-8.1\n",
-      "\u001b[1;31mE: \u001b[0mCould not open lock file /var/lib/dpkg/lock-frontend - open (13: Permission denied)\u001b[0m\n",
-      "\u001b[1;31mE: \u001b[0mUnable to acquire the dpkg frontend lock (/var/lib/dpkg/lock-frontend), are you root?\u001b[0m\n",
-      "Collecting ffmpy\n",
-      "  Using cached ffmpy-0.2.3.tar.gz (4.6 kB)\n",
-      "Building wheels for collected packages: ffmpy\n",
-      "  Building wheel for ffmpy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for ffmpy: filename=ffmpy-0.2.3-py3-none-any.whl size=4621 sha256=62b40df89070dd6fe5bfbf78e14d80374d86bb58423dfc83a4f24383dcd9f445\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/89/ba/63/44887ceb692de6586cf0788c901dace9b3a371e914a9b4ad79\n",
-      "Successfully built ffmpy\n",
-      "Installing collected packages: ffmpy\n",
-      "Successfully installed ffmpy-0.2.3\n",
-      "Collecting webp\n",
-      "  Using cached webp-0.1.0a16.tar.gz (10 kB)\n",
-      "Requirement already satisfied: cffi>=1.0.0 in /opt/conda/lib/python3.8/site-packages (from webp) (1.14.0)\n",
-      "Requirement already satisfied: Pillow>=4.0.0 in /opt/conda/lib/python3.8/site-packages (from webp) (7.2.0)\n",
-      "Requirement already satisfied: numpy>=1.0.0 in /opt/conda/lib/python3.8/site-packages (from webp) (1.19.0)\n",
-      "Requirement already satisfied: pycparser in /opt/conda/lib/python3.8/site-packages (from cffi>=1.0.0->webp) (2.20)\n",
-      "Building wheels for collected packages: webp\n",
-      "  Building wheel for webp (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for webp: filename=webp-0.1.0a16-cp38-cp38-linux_x86_64.whl size=445229 sha256=d98938c754f566524bb0884a70bd6e35a5f783ccbb46d62ccedc67bd033b878d\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/f5/ea/92/8d98d79a5f24a9c8f841747c7300d66510b74a09dc2f41766c\n",
-      "Successfully built webp\n",
-      "Installing collected packages: webp\n",
-      "Successfully installed webp-0.1.0a16\n",
-      "Found existing installation: Pillow 7.2.0\n",
-      "Uninstalling Pillow-7.2.0:\n",
-      "  Would remove:\n",
-      "    /opt/conda/lib/python3.8/site-packages/PIL/*\n",
-      "    /opt/conda/lib/python3.8/site-packages/Pillow-7.2.0.dist-info/*\n",
-      "Proceed (y/n)? "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python3 -m pip install pyppeteer\n",
-    "!apt install libxrender1 libxtst6 libxi6\n",
+    "# !python3 -m pip install pyppeteer\n",
+    "# !apt install libxrender1 libxtst6 libxi6 libatk-bridge2.0-0 libgtk-3-0\n",
     "\n",
-    "!pip install ffmpy\n",
+    "# !pip install ffmpy\n",
     "\n",
-    "!pip install webp\n",
-    "!pip uninstall Pillow\n",
-    "!pip install Pillow\n",
+    "# !pip install webp\n",
+    "# !pip uninstall -y Pillow\n",
+    "# !pip install Pillow\n",
     "\n",
-    "!pip install piexif"
+    "# !pip install piexif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -84,13 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "images_dir = Path('../images')\n",
@@ -99,13 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "recycle_dir.mkdir(parents=True, exist_ok=True)"
@@ -120,9 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "Tried svglib, cairosvg and phantomjs, all are error prone. Improper font, color, etc.\n",
     "\n",
@@ -131,13 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pyppeteer import launch"
@@ -145,13 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "async def svg2png (in_svg_path, out_png_path):\n",
@@ -171,14 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../images/external_link/reddit/dataisugly/jif9br.svg\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -204,13 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ffmpy"
@@ -218,13 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
@@ -252,13 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import imageio"
@@ -266,13 +178,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
@@ -298,13 +205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image"
@@ -312,14 +214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../images/external_link_alt/reddit/dataisugly/girb1m.webp\n",
+      "../images/external_link_alt/reddit/dataisugly/gujq2y.webp\n",
+      "../images/external_link/reddit/dataisugly/gujq2y.webp\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "for root, dirs, files in os.walk(images_dir):\n",
     "    for name in files:\n",
@@ -344,13 +251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os"
@@ -358,13 +260,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# id: '2w19o1' downloaded from 'http://i.imgur.com/GE7LJR6.pngh' as .pngh\n",
@@ -389,13 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# id: '4f927p' downloaded from 'http://imgur.com/(null)' as '4f927p(null'\n",
@@ -417,13 +309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import piexif"
@@ -431,13 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import warnings\n",
@@ -446,52 +328,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Error digesting image: 63027680638.jpg Corrupt EXIF data.  Expecting to read 2 bytes but only got 0.\n",
-    "# im = Image.open('images/preview/tumblr/wtf-viz/63027680638.jpg')\n",
-    "# piexif.remove('images/preview/tumblr/wtf-viz/63027680638.jpg')"
+    "im = Image.open(images_dir/'preview/tumblr/wtf-viz/63027680638.jpg')\n",
+    "piexif.remove(str(images_dir/'preview/tumblr/wtf-viz/63027680638.jpg'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Error digesting image: 63027680638.jpg Corrupt EXIF data.  Expecting to read 2 bytes but only got 0.\n",
-    "# im = Image.open('images/thumbnail/tumblr/wtf-viz/63027680638.jpg')\n",
-    "# piexif.remove('images/thumbnail/tumblr/wtf-viz/63027680638.jpg')"
+    "im = Image.open(images_dir/'thumbnail/tumblr/wtf-viz/63027680638.jpg')\n",
+    "piexif.remove(str(images_dir/'thumbnail/tumblr/wtf-viz/63027680638.jpg'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2800: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n"
+      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:2847: DecompressionBombWarning: Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -499,25 +366,20 @@
     "# Error digesting image: 2jtymg.jpg Image size (135364608 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
     "# 39744830 bytes ~37.9MB\n",
     "# huge image, nothing to do\n",
-    "im = Image.open('images/archive/reddit/dataisugly/2jtymg.jpg')"
+    "im = Image.open(images_dir/'archive/reddit/dataisugly/2jtymg.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:2800: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n"
+      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:2847: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -525,32 +387,27 @@
     "# Error digesting image: 9g6pzu.png Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
     "# 2208964 bytes ~\n",
     "# huge image, nothing to do\n",
-    "im = Image.open('images/external_link/reddit/dataisugly/9g6pzu.png')"
+    "im = Image.open(images_dir/'external_link/reddit/dataisugly/9g6pzu.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/PIL/Image.py:960: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-      "  \"Palette images with Transparency expressed in bytes should be \"\n"
+      "/opt/conda/lib/python3.8/site-packages/PIL/Image.py:962: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "# Error digesting image: anqyqb.png Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
     "# Happens when converting transparent .png to grayscale, nothing to do\n",
-    "im = Image.open('images/preview/reddit/dataisbeautiful/anqyqb.png')\n",
+    "im = Image.open(images_dir/'preview/reddit/dataisbeautiful/anqyqb.png')\n",
     "imL = im.convert('L')"
    ]
   },
@@ -583,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
