--- a/notebooks/images_labeling.ipynb
+++ b/notebooks/images_labeling.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongo = MongoClient(\"172.17.0.1\", 27017)\n",
+    "mongo_uri = json.load(open('./credentials/mongodb_credentials.json'))['uri']\n",
+    "mongo = MongoClient(mongo_uri)\n",
     "db = mongo[\"bad-vis\"]\n",
     "posts = db[\"posts\"]\n",
     "imagemeta = db[\"imagemeta\"]\n",
@@ -71,7 +72,8 @@
    "source": [
     "# image_url_prefix = \"http://pc.ust:7000\"\n",
     "# image_url_prefix = \"http://vpn2d.mydev:7000\"\n",
-    "image_url_prefix = 'http://localhost:7000'"
+    "image_url_prefix = \"http://vpn3.mydev:7000\"\n",
+    "# image_url_prefix = 'http://localhost:7000'"
    ]
   },
   {
@@ -109,9 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Labeling"
    ]
@@ -125,8 +125,8 @@
     "labelbox_height = 1200\n",
     "gallery_limit = 50\n",
     "gallery_height = 1100\n",
-    "is_wide = False\n",
-    "# is_wide = True\n",
+    "# is_wide = False\n",
+    "is_wide = True\n",
     "\n",
     "all_images = [i for i in imagelabel.find().sort(\"popularity_score\", DESCENDING)]\n",
     "\n",
@@ -196,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df5a740ca1944fa7bf5a42e5d71e6219",
+       "model_id": "e1fc5e24a2dd404596d5e52c2b5f073d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1103,7 +1103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d453cd1a1f984b33ad929001ae361931",
+       "model_id": "35328df402174fe7aedf5c5e2c48d046",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1127,7 +1127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d3adde4fb914b2c95cdba59f51138d3",
+       "model_id": "72e3d66ff69b4416b77232b88fea0fde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1160,12 +1160,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0b7e1f3185a45d7a7f57028bdac8598",
+       "model_id": "5cad6a8dcf734b348c9a303eac9ffb43",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value=\"<a href='http://localhost:7000/projects/bad-vis-images/notebooks/tmp/currentimage.html' target='_b…"
+       "HTML(value=\"<a href='http://vpn3.mydev:7000/projects/bad-vis-images/notebooks/tmp/currentimage.html' target='_…"
       ]
      },
      "metadata": {},
@@ -1185,12 +1185,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04418c885390464ab10ddf76a3761581",
+       "model_id": "807a0b75f713426f8ed0ac9cfc3c8f26",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value=\"<a href='http://localhost:7000/projects/bad-vis-images/notebooks/tmp/currentpost.html' target='_bl…"
+       "HTML(value=\"<a href='http://vpn3.mydev:7000/projects/bad-vis-images/notebooks/tmp/currentpost.html' target='_b…"
       ]
      },
      "metadata": {},
