--- a/notebooks/images_meta.ipynb
+++ b/notebooks/images_meta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
@@ -42,15 +37,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mongo = MongoClient('172.17.0.1', 27017)\n",
+    "mongo_uri = json.load(open('./credentials/mongodb_credentials.json'))['uri']\n",
+    "mongo = MongoClient(mongo_uri)\n",
     "db = mongo['bad-vis']\n",
     "posts = db['posts']\n",
     "imagefiles = db['imagefiles']\n",
@@ -61,12 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "images_dir = Path('../images')"
@@ -75,12 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "main_image_phashes = shelve.open('handmade/main_image_phashes')"
@@ -89,12 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "invalid_post_ids = set(json.load(open('handmade/invalid_post_ids.json')))\n",
@@ -105,12 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "imagevalidfiles.drop()\n",
@@ -120,17 +91,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "105"
+       "106"
       ]
      },
      "execution_count": 8,
@@ -147,22 +113,17 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae95c386a4ab44b6973c8fb504860403",
+       "model_id": "39f1544c0c4a4badaafa13e32688a168",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', layout=Layout(width='20px'), max=1.0), HTML(value=''…"
       ]
      },
      "metadata": {},
@@ -200,12 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ImageMeta ():\n",
@@ -333,12 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_imageMeta (image_id):\n",
@@ -366,22 +317,17 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10d7720d84c34824b0bcc62a9e4cfff1",
+       "model_id": "5b5bac4ae1df49c79909c3d145c0756b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=6736.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10450.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -391,6 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cannot find corresponding post: reddit/dataisugly/afwt84\n",
       "\n"
      ]
     }
@@ -410,12 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_link (url, text):\n",
@@ -468,22 +410,17 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "198175c038a849c18edc6d375dd7ad83",
+       "model_id": "9fab1e5b5bfd4dc0bddf6d1be4cad6a3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=6736.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10450.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -512,96 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# m = ImageMeta([f for f in imagevalidfiles.find({'id': '32rnec'})])\n",
-    "# display(make_main_image_box(m))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visually check invalid images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# invalids = []\n",
-    "# for h in invalid_image_phashes:\n",
-    "#     invalid_images = [f for f in imagefiles.find({'phash': h})]\n",
-    "#     if not invalid_images:\n",
-    "#         continue\n",
-    "# #     print(f\"{h} {[i['image_id'] for i in invalid_images]}\")\n",
-    "# #     display(HBox([\n",
-    "# #             widgets.Image(value=open(i['file_path'], 'rb').read(), width=100, height=100)\n",
-    "# #             for i in invalid_images]))\n",
-    "#     invalids.append(invalid_images[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# display(Box([widgets.Image(value=open(i['file_path'], 'rb').read(), width=100, height=100) for i in invalids],\n",
-    "#                 layout=Layout(display='flex', flex_flow='row wrap')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# duplicated_image_ids = [c\n",
-    "#                      for c in nx.components.connected_components(nx.Graph(distance <= 1))\n",
-    "#                      if len(c) > 1]\n",
-    "# len(duplicated_image_ids)\n",
-    "# for idxs in duplicated_image_ids:\n",
-    "#     print(f\"{[imageDedup[i]['image_id'] for i in idxs]}\")\n",
-    "#     if len(idxs) >= 4:\n",
-    "#         display(HBox([\n",
-    "#             widgets.Image(value=open(imageDedup[i]['file_path'], 'rb').read(), width=100, height=100)\n",
-    "#             for i in idxs]))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -622,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
