--- a/notebooks/images_recover.ipynb
+++ b/notebooks/images_recover.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests_cache\n",
@@ -18,12 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
@@ -50,15 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mongo = MongoClient('172.17.0.1', 27017)\n",
+    "mongo_uri = json.load(open('./credentials/mongodb_credentials.json'))['uri']\n",
+    "mongo = MongoClient(mongo_uri)\n",
     "db = mongo['bad-vis']\n",
     "posts = db['posts']\n",
     "dlthumbnailresults = db['dlthumbnailresults']\n",
@@ -73,12 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "images_dir = Path('../images')"
@@ -93,21 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2360"
+       "4636"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,19 +110,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Also recover invalid images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# imagefiles = db['imagefiles']\n",
@@ -168,19 +140,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "# Test recovering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# recover_downloads[0]"
@@ -188,10 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# r = requests.get(f\"https://archive.org/wayback/available?url={recover_downloads[0]['link']}\")\n",
@@ -201,10 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# url = r_json['archived_snapshots']['closest']['url'].replace('/http', 'if_/http')\n",
@@ -213,10 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# r = requests.get(url)\n",
@@ -233,13 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_content_type_ext (content_type, req=None):\n",
@@ -338,13 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !rm images/archive/reddit/dataisugly/763yfl.png"
@@ -352,13 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !ls -al images/archive/reddit/dataisugly/763yfl.png"
@@ -366,13 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# for post in [dlexternalresults.find_one({'id': '763yfl'})]:\n",
@@ -382,23 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3405baeea08f4ed4983587b6ca92fbcb",
+       "model_id": "49b510db4df244c486be1d122e53b2f8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=2360.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=4636.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -431,21 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x7ff493b9d140>"
+       "<pymongo.results.InsertManyResult at 0x7f893b736280>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,26 +392,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'archive_query_error': 557,\n",
-       "         'archive_not_found': 1146,\n",
-       "         'exists': 169,\n",
-       "         'downloaded': 12,\n",
-       "         'skip_content_type': 471,\n",
-       "         'invalid_content_type': 5})"
+       "Counter({'archive_not_found': 1176,\n",
+       "         'exists': 192,\n",
+       "         'downloaded': 3,\n",
+       "         'skip_content_type': 479,\n",
+       "         'invalid_content_type': 5,\n",
+       "         'archive_query_error': 2781})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
