--- a/notebooks/images_thumbnail.ipynb
+++ b/notebooks/images_thumbnail.ipynb
@@ -104,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mongo = MongoClient('172.17.0.1', 27017)\n",
+    "mongo_uri = json.load(open('./credentials/mongodb_credentials.json'))['uri']\n",
+    "mongo = MongoClient(mongo_uri)\n",
     "db = mongo['bad-vis']\n",
     "posts = db['posts']\n",
     "imagededup = db['imagededup']\n",
@@ -348,12 +349,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "903ff83c7cfb4f51ab9e3306c04bf02d",
+       "model_id": "f97aab141bbf4ce595602dba0dbf4e97",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=5818.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=8894.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -422,7 +423,7 @@
     {
      "data": {
       "text/plain": [
-       "1057"
+       "1059"
       ]
      },
      "execution_count": 17,
@@ -678,7 +679,7 @@
           "tag": "fault:faultystatistics"
          },
          {
-          "count": 9,
+          "count": 10,
           "description": "Plotting future data points derived from unreliable prediction.",
           "name": "Unreliable Forecasting",
           "subcategories": [
@@ -696,7 +697,7 @@
           "tag": "fault:position"
          },
          {
-          "count": 13,
+          "count": 14,
           "description": "Valid encoding choice but incorrectly drawn, e.g., a glitch.",
           "name": "Plotting Error",
           "subcategories": [
@@ -745,7 +746,7 @@
           "tag": "fault:missinglabel"
          },
          {
-          "count": 34,
+          "count": 35,
           "description": "Items are labeled with incorrect description.",
           "name": "Incorrect Item Labels",
           "subcategories": [
@@ -866,7 +867,7 @@
           "tag": "fault:labelconfuse"
          },
          {
-          "count": 51,
+          "count": 52,
           "description": "Overwhelmed by visual clutter.",
           "name": "Cluttering",
           "subcategories": [
@@ -893,7 +894,7 @@
           "tag": "fault:chartjunk"
          },
          {
-          "count": 29,
+          "count": 30,
           "description": "Text in the chart are illegible.",
           "name": "Illegible Text",
           "subcategories": [
@@ -1188,7 +1189,7 @@
           "category": "fault",
           "description": "Issues introduced in the graph drawing process, leads to missing graph elements or incomplete graph",
           "group": "pipeline",
-          "name": "Graph Drawing",
+          "name": "Chart Making",
           "subcategory": "graph"
          },
          {
@@ -1256,7 +1257,7 @@
           "tag": "form:progressbar"
          },
          {
-          "count": 195,
+          "count": 198,
           "name": "Line Chart",
           "subcategory": "line",
           "tag": "form:linechart"
@@ -1555,7 +1556,7 @@
           "tag": "data:categorical"
          },
          {
-          "count": 481,
+          "count": 483,
           "name": "Quantitative",
           "subcategory": "attribute",
           "tag": "data:quantitative"
@@ -1579,7 +1580,7 @@
           "tag": "data:ordinal"
          },
          {
-          "count": 243,
+          "count": 245,
           "name": "Time Series",
           "subcategory": "time",
           "tag": "data:timeseries"
@@ -1651,7 +1652,7 @@
           "tag": "data:accumulated"
          },
          {
-          "count": 401,
+          "count": 402,
           "name": "Percentage",
           "subcategory": "derived",
           "tag": "data:percentage"
@@ -1744,7 +1745,7 @@
           "tag": "domain:sports"
          },
          {
-          "count": 139,
+          "count": 140,
           "name": "Health",
           "tag": "domain:health"
          },
@@ -1764,7 +1765,7 @@
           "tag": "domain:computer"
          },
          {
-          "count": 65,
+          "count": 67,
           "name": "Environment",
           "tag": "domain:environment"
          },
@@ -1897,12 +1898,12 @@
           "tag": "effect:distorted"
          },
          {
-          "count": 556,
+          "count": 558,
           "name": "Confused",
           "tag": "effect:confuesed"
          },
          {
-          "count": 25,
+          "count": 26,
           "name": "Suggestive",
           "tag": "effect:suggestive"
          }
@@ -1923,7 +1924,7 @@
           "tag": "flag:duplicated"
          },
          {
-          "count": 32,
+          "count": 33,
           "name": "Invalid",
           "tag": "flag:invalid"
          },
@@ -2086,7 +2087,7 @@
          "category": "fault",
          "description": "Issues introduced in the graph drawing process, leads to missing graph elements or incomplete graph",
          "group": "pipeline",
-         "name": "Graph Drawing",
+         "name": "Chart Making",
          "subcategory": "graph"
         },
         {
@@ -2285,7 +2286,7 @@
         },
         {
          "category": "fault",
-         "count": 9,
+         "count": 10,
          "description": "Plotting future data points derived from unreliable prediction.",
          "name": "Unreliable Forecasting",
          "subcategories": [
@@ -2305,7 +2306,7 @@
         },
         {
          "category": "fault",
-         "count": 13,
+         "count": 14,
          "description": "Valid encoding choice but incorrectly drawn, e.g., a glitch.",
          "name": "Plotting Error",
          "subcategories": [
@@ -2359,7 +2360,7 @@
         },
         {
          "category": "fault",
-         "count": 34,
+         "count": 35,
          "description": "Items are labeled with incorrect description.",
          "name": "Incorrect Item Labels",
          "subcategories": [
@@ -2492,7 +2493,7 @@
         },
         {
          "category": "fault",
-         "count": 51,
+         "count": 52,
          "description": "Overwhelmed by visual clutter.",
          "name": "Cluttering",
          "subcategories": [
@@ -2522,7 +2523,7 @@
         },
         {
          "category": "fault",
-         "count": 29,
+         "count": 30,
          "description": "Text in the chart are illegible.",
          "name": "Illegible Text",
          "subcategories": [
@@ -2829,7 +2830,7 @@
         },
         {
          "category": "form",
-         "count": 195,
+         "count": 198,
          "name": "Line Chart",
          "subcategory": "line",
          "tag": "form:linechart"
@@ -3116,7 +3117,7 @@
         },
         {
          "category": "data",
-         "count": 481,
+         "count": 483,
          "name": "Quantitative",
          "subcategory": "attribute",
          "tag": "data:quantitative"
@@ -3144,7 +3145,7 @@
         },
         {
          "category": "data",
-         "count": 243,
+         "count": 245,
          "name": "Time Series",
          "subcategory": "time",
          "tag": "data:timeseries"
@@ -3228,7 +3229,7 @@
         },
         {
          "category": "data",
-         "count": 401,
+         "count": 402,
          "name": "Percentage",
          "subcategory": "derived",
          "tag": "data:percentage"
@@ -3286,7 +3287,7 @@
         },
         {
          "category": "domain",
-         "count": 139,
+         "count": 140,
          "name": "Health",
          "tag": "domain:health"
         },
@@ -3310,7 +3311,7 @@
         },
         {
          "category": "domain",
-         "count": 65,
+         "count": 67,
          "name": "Environment",
          "tag": "domain:environment"
         },
@@ -3448,13 +3449,13 @@
         },
         {
          "category": "effect",
-         "count": 556,
+         "count": 558,
          "name": "Confused",
          "tag": "effect:confuesed"
         },
         {
          "category": "effect",
-         "count": 25,
+         "count": 26,
          "name": "Suggestive",
          "tag": "effect:suggestive"
         },
@@ -3472,7 +3473,7 @@
         },
         {
          "category": "flag",
-         "count": 32,
+         "count": 33,
          "name": "Invalid",
          "tag": "flag:invalid"
         },
@@ -3516,17 +3517,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'tag': 'form:unknown', 'subcategory': 'other', 'name': 'Unclassified', 'count': 16, 'category': 'form', 'images': ['8fok48_0', 'dld2yr_0', 'ezt3ag_0', 'dq9mu7_0', 'e4mzye_0', '2rd22k_0', '8uatud_0', '7ssujs_0', '4fj6dw_0', '9im3w9_0', 'chr3dh_0', '8f4qlt_0', 'eismwb_0', 'czp1vh_0', '8g6xi6_0', 'dau2cy_0']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in labelTags['tags']:\n",
     "    t['images'] = [i['image_name'] for i in visimages.find({'labels': t['tag']})]\n",
